--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* CSS structure (A guide of Granda)
+1. Positioning.
+2. Box model
+3. Tipography
+4. Visuals
+5. Others
+*/
+
 :root {
   /* Colors */
   --bitcoin-orange: #f7931a;
@@ -73,6 +81,7 @@ header img {
   width: 229px;
   height: 48px;
   background: var(--off-white);
+
   /* Sombra  */
   box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
   border: none;
@@ -165,6 +174,7 @@ main {
   max-width: 300px;
   height: 250px;
   margin: 0 auto;
+
   /* background-color: #fff; */
   border-radius: 15px;
 }
@@ -180,6 +190,7 @@ main {
   font-weight: 500;
   line-height: 1.9rem;
   color: var(--grey);
+
   /* border-bottom: 1px solid #faf8f7; */
   background-color: var(--just-white);
 }
