--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,21 @@ html {
   font-size: 62.5%;
   font-family: "DM Sans", sans-serif;
 }
+
+.container-main-everything {
+display: flex;
+flex-direction: column;
+width: 100vw;
+height: 100vh;
+}
+
 header {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;
+  align-self: center;
   width: 100%;
   min-width: 320px;
   height: 334px;
